# lxrandr

./: .gitignore  Makefile.am  README  README.md  autogen.sh  configure.ac  zrelease
data/: Makefile.am  lxrandr.1  lxrandr.desktop
po/: LINGUAS  Makefile.in  Makefile.in.gen  POTFILES.in  af.po  ar.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  frp.po  gl.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  kk.po  ko.po  lg.po  lt.po  lxrandr.pot  ml.po  ms.po  (+27 more)
src/: Makefile.am  gtkcompat.c  gtkcompat.h  lxrandr.c
